adding numbers to steps

--- a/Javascript/homework/responses/2.1-css-linking.md
+++ b/Javascript/homework/responses/2.1-css-linking.md
@@ -2,22 +2,28 @@
 
 #### How to begin a CSS file and link it to your HTML file.
 
-This week, we're going to take the HTML and JavaScript code we wrote last week and style our page using CSS to make it more aesthetically pleasing.  
+This week, we're going to take the HTML and JavaScript code we wrote last week and style our page using CSS to make it more aesthetically pleasing.
 
-- First you're going to create a new folder called week 2 within your orginal directory. You should now have two folders called "Week 1" and "Week 2"
+First, let's create a new folder to hold your files.  
+
+1. Create a new folder called week 2 within your orginal directory. You should now have two folders called "Week 1" and "Week 2"
 
 ![Folders](https://i.gyazo.com/65456175a2f8c6c419a9ed354439c77f.png)
 
-- Next Copy your index.html file from week 1 then paste it in your week 2 homework folder.
+2. Copy your index.html file from week 1 and paste it in your week 2 homework folder.
 
 ![Copy](https://i.gyazo.com/b2fa8ced536088a0ce51ffb0a9fc6409.gif)
 
-- Next, open this folder in Visual Studio Code.  You can do this by clicking "Open folder..." on VSC's Welcome page and selecting your path.
+3. Open this folder in Visual Studio Code.  You can do this by clicking "Open folder..." on VSC's "Welcome" page and selecting your path.
 
-Once were in Visual Studio Code we're going to need to style our webpage, First we must link a CSS file to our HTML file.  
+Once you have Visual Studio Code open, you can style your webpage.
 
-- Add a `link` tag inside the head of your html file
-  - Set the `rel` attribute to `"stylesheet"` and the `href` attribute to `"style.css"`.
+First we must link a CSS file to our HTML file.  
+
+4. Add a `link` tag inside the head of your html file
+
+5. Set the `rel` attribute of the `link` tag to `"stylesheet"`, and its `href` attribute to `"style.css"`.
+
  <details><summary>Having Issues? Click Me!</summary>
 <p>
 
@@ -28,7 +34,8 @@ Once were in Visual Studio Code we're going to need to style our webpage, First 
 </p>
 </details>
 
-Next, create a new file in your week 2 folder called `style.css`. It's important that your file name matches the one you typed in your link tag's `href` attribute in your HTML file, as this will be what links your two files.
+6. Create a new file in your week 2 folder called `style.css`. 
+   - It's important that your file name matches the one you typed in your link tag's `href` attribute in your HTML file, as this will be what links your two files.
 
 #### Task 1 Checklist:
 - [ ] Reference (href) to "styles.css" in your HTML file
