--- a/Javascript/homework/responses/2.3-clock-design.md
+++ b/Javascript/homework/responses/2.3-clock-design.md
@@ -2,17 +2,21 @@
 
 #### For the third task, we're going to begin designing a digital clock using some basic styling techniques.
 
-After you're satisfied with the body of your page, define a selector that styles elements in the `clock` class. This selector will style the `div` we created in the last assignment that prints the time on your screen.  If this `div` tag only has an `id` property, be sure to go back to your HTML file and add a `class` attribute set to `"clock"`.
+After you're satisfied with the body of your page, you'll move on to designing your clock.
+
+1. Define a selector that styles elements in the `clock` class. 
+   - This selector will style the `div` we created in the last assignment that prints the time on your screen.  
+   - If this `div` tag only has an `id` property, be sure to go back to your HTML file and add a `class` attribute set to `"clock"`.
 
 Within your `.clock` selector:
 
-- Set the `width` to `500px` and `height` to `200px`. This will define the rectangle in which the time is printed.
-- Add a background and a solid border using colors different from the screen's background so you can see what the box will look like.
-  - Use the `background-color` and `border` attributes for these items respectively
-- Set your `display` to `flex` 
-- Center your text using `align-items` and `justify-content` 
+2. Set the `width` to `500px` and `height` to `200px`. This will define the rectangle in which the time is printed.
+3. Add a **background** and a **solid border** using colors different from the screen's background so you can see what the box will look like.
+   - Use the `background-color` and `border` attributes for these items respectively
 
-You may also want to adjust the margins of your clock so that theres some space between the box and the form - I simply adjusted the left margin of my clock.
+4. Set the `display` to `flex` 
+5. Center the text using `align-items` and `justify-content` 
+6. You may also want to **adjust the margins** of your clock so that theres some space between the box and the form - I simply adjusted the left margin of my clock.
 
 This is what my code looks like after these steps:
 
