--- a/Javascript/homework/responses/2.2-body.md
+++ b/Javascript/homework/responses/2.2-body.md
@@ -4,10 +4,10 @@
 
 In your CSS file:
 
-- Define a body selector (`.body{}`) 
+1. Define a body selector (`.body{}`) 
 
-  <details><summary>What is a selector?</summary>
-  <p>
+<details><summary>What is a selector?</summary>
+<p>
 
 
   #### CSS selectors are used to "find" (or select) the HTML elements that you want to style.
@@ -21,16 +21,20 @@ In your CSS file:
   </p>
   </details>
 
-- Set the `display` to `flex`  
+2. Inside the selector, set the `display` attribute to `flex`  
+   - This will make sure all elements fit the screen appropriately. 
 
-This will make sure all elements fit the screen appropriately. 
+3. Set the `justify-content`  and `align-items` attributes to `center` so your items are centered on the y axis and the x axis respectively. 
 
-- Set the `justify-content`  and `align-items` attributes to `center` so your items are centered on the y axis and the x axis respectively. 
-- You may also want to set the `min-height` to `100vh` so that height of your content will always be relative to the size of the screen.
+4. You may also want to set the `min-height` to `100vh` so that height of your content will always be relative to the size of the screen.
 
-Inside the body, you can also change the color of the background, as well as the color, font, and size of your text.  I recommend using the `font-family` attribute with a few backup fonts in case your browser doesn't support your font of choice.  You can add back up fonts by following your font with a comma and another font family or type. My font-family line looks like this:
+5. Inside the body, you can also **change the color of the background**, as well as the **color, font, and size** of your **text**.  
 
-`font-family: "Trebuchet MS", Verdana, sans-serif;`
+   - I recommend using the `font-family` attribute with a few backup fonts in case your browser doesn't support your font of choice.  
+
+   - You can add back up fonts by following your font with a comma and another font family or type. My font-family line looks like this:
+
+     `font-family: "Trebuchet MS", Verdana, sans-serif;`
 
 <details><summary>Having Issues? Click Me!</summary>
 <p>
