--- a/Javascript/homework/responses/2.1-css-linking.md
+++ b/Javascript/homework/responses/2.1-css-linking.md
@@ -24,8 +24,9 @@ First we must link a CSS file to our HTML file.
 
 5. Set the `rel` attribute of the `link` tag to `"stylesheet"`, and its `href` attribute to `"style.css"`.
 
- <details><summary>Having Issues? Click Me!</summary>
+ <details><summary>Having issues? Click me!</summary>
 <p>
+
 
 ```html
 <link rel="stylesheet" href="styles.css"
