--- a/Javascript/homework/responses/2.2-body.md
+++ b/Javascript/homework/responses/2.2-body.md
@@ -36,8 +36,9 @@ In your CSS file:
 
      `font-family: "Trebuchet MS", Verdana, sans-serif;`
 
-<details><summary>Having Issues? Click Me!</summary>
+<details><summary>Having issues? Click me!</summary>
 <p>
+
 
 ```css
 body{
