--- a/Javascript/homework/responses/2.3-clock-design.md
+++ b/Javascript/homework/responses/2.3-clock-design.md
@@ -22,8 +22,9 @@ This is what my code looks like after these steps:
 
 ![2.3-final](https://user-images.githubusercontent.com/32557138/106702386-4c179800-65b6-11eb-996c-4aa01b57a54a.png)
 
-<details><summary>Only Open This Once You Finished Your Code</summary>
+<details><summary>If your page doesn't look right, check this out:</summary>
 <p>
+
 
 
 ```css
