--- a/Serverless-Functions/homework/responses/2.5-callFaceFetch.md
+++ b/Serverless-Functions/homework/responses/2.5-callFaceFetch.md
@@ -30,7 +30,7 @@ Javascript is what we call a "synchronous" language, meaning operations in Javas
 
 Can you guess what this means?
 
-Simply put, async functions allow other operations to continue running as they are being executed [(read more)](https://dev.to/hardy613/asynchronous-vs-synchronous-programming-23ed). Promises are objects that 
+Simply put, async functions allow other operations to continue running as they are being executed [(read more)](https://dev.to/hardy613/asynchronous-vs-synchronous-programming-23ed). Promises are sychnronous objects, similar to their real life meaning, return a value at some point in the future, or a reason for why that value could not be returned - they represent the result of an async function that may or may not be resolved.
 
 > [Is JavaScript Synchronous or Asynchronous? What the Hell is a Promise?](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise)
 
