--- a/Serverless-Functions/homework/responses/2.3-faceEndpoint.md
+++ b/Serverless-Functions/homework/responses/2.3-faceEndpoint.md
@@ -9,6 +9,11 @@ This step is fairly straightforward:
 
 Record and save the API endpoint and [subscription key](https://docs.microsoft.com/en-us/azure/api-management/api-management-subscriptions), as we'll be using it in the following parts.
 
+If you cannot find the keys:
+* Navigate to the home page on the Micrsoft Azure portal (https://portal.azure.com/#home)
+* Click on the resource you need the keys for
+* On the left menu bar, locate the Resource Management section and click on "Keys and Endpoint"
+
 **Once you are done, write a comment describing what you completed.**
 
 [![](http://img.youtube.com/vi/2aA8OEZ1wk8/0.jpg)](http://www.youtube.com/watch?v=2aA8OEZ1wk8 "Microsoft Cognitive Services")
