--- a/Serverless-Functions/homework/responses/3.2-displayData.md
+++ b/Serverless-Functions/homework/responses/3.2-displayData.md
@@ -55,7 +55,9 @@ Now we need to create our main function called `handle(event) {}`. This will tak
    });
    ```
 
-3. Next, we have to add a variable for the JSON data. Make a new variable called `data` and set it to the response JSON like we did earlier. If you need a hint, use the `.json()` function. We also need another variable, `emotion`, which will be set to `data.result[0].faceAttributes.emotion;`. This sets `emotion` to the first result in our JSON data, and pulls the information out into a value. 
+3. Next, we have to add a variable for the JSON data. Make a new variable called `data` and set it to the response JSON like we did earlier. If you need a hint, use the `.json()` function. We also need another variable, `emotion`, which will be set to `data.result[0].faceAttributes.emotion;`. This sets `emotion` to the first result in our JSON data, and pulls the information out into a value.
+
+Note: when you run the program, if you come across a [CORS policy error](https://web.dev/cross-origin-resource-sharing/), you will need to go to https://portal.azure.com/#home, navigate to your function, scroll down to API Management on the left menu bar, and navigate to CORS. Here you will need to unselect the "Enable Access-Control-Allow-Credentials," remove any links in "Allowed Origins" and add one with a * (which represents all origins). Save your changes.
 
 ### Checkpoint #5
 Just like we tested the Azure Function earlier by printing out something into our log, we will do the same with our JavaScript. 
