--- a/Serverless-Functions/homework/responses/3.1-html.md
+++ b/Serverless-Functions/homework/responses/3.1-html.md
@@ -21,6 +21,14 @@ If you still need some help learning HTML and CSS, checkout these resources:
 - W3Schools (HTML): https://www.w3schools.com/html/default.asp
 - W3Schools (CSS): https://www.w3schools.com/css/default.asp
 
+Questions to think about:
+* [Intro to HTML](https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/HTML_basics)
+* [What is an element?](https://www.w3schools.com/html/html_elements.asp)
+* What is a [type](https://www.w3schools.com/tags/att_type.asp), [id](https://www.w3schools.com/html/html_id.asp), [attribute](https://www.w3schools.com/html/html_attributes.asp)?
+* What is a container?
+* What is a form?
+* What is [<script>](https://developer.mozilla.org/en-US/docs/Web/HTML/Element/script)?
+
 Here's a list of HTML items you need to create (please use the id's specified)
 
 1. `header` element that says anything you want. For example, mine says **Example Project**
