week 1 slack apps revised

--- a/Slack-Apps/homework/responses/1.2-bots-and-apps.md
+++ b/Slack-Apps/homework/responses/1.2-bots-and-apps.md
@@ -2,7 +2,7 @@
 
 #### Learn about the various types of Slack Apps you can make.
 
-Now that you better understand Bolt and Slack, it is time to learn about different types of projects we can build on Slack! This issue will cover the differences between a Slack **app** and a Slack **bot**. 
+Now that you understand Bolt and Slack better, it is time to learn about the different types of projects we can build on Slack! This issue will cover the differences between a Slack **app** and a Slack **bot**. 
 
 ## 📚 Reading
 
@@ -16,7 +16,11 @@ The article on bots listed a couple of their use cases, including:
 * Posting messages!
 * Uploading files!
 
-Come up with 2-3 ideas for a Slack app and 2 ideas for a bot and leave them as comments. These ideas don't have to consider any logistics, and can be as simple or complex as you would like!
+Come up with 2-3 ideas for a Slack app and 2 ideas for a bot and write them in a file. These ideas don't have to consider any logistics, and can be as simple or complex as you would like!
+
+## Submission
+
+To move to the next issue, make sure to **commit the file** you wrote your ideas down in. Below are the instructions:
 
 **After you have finished, make sure to commit any file changes you made. To do this, please create a `branch` off of the master called `week(x)` with x being the # of the week you are on. For that week you will need to create a PR for every Learning Lab step to review and make sure your work is correct. For example: After finishing step 1.2, make a new branch off of `week(x)` and call it `week(x)-1.2` (with 1.2 being the step you're on). Then create a `Pull Request` between `week(x)` and `week(x)-1.2`. After reviewing you're PR or having another user review it, merge you're work and continue.**
 
