--- a/Slack-Apps/homework/responses/1.1-bolt-intro.md
+++ b/Slack-Apps/homework/responses/1.1-bolt-intro.md
@@ -4,7 +4,7 @@
 
 **If you missed the livestream or are unable to view the recording, here is a link to a written copy: https://github.com/bitprj/BitCamp/blob/master/Slack-Apps/week1/blog.md**
 
-Bolt JS is a framework, or a platform, for developing in JavaScript for Slack. Bolt **significantly** reduces the learning curve for Slack development by abstracting away some of the more complicated language barriers involved. In this issue, you will be familiarizing yourself with Bolt.
+Bolt JS is a framework, or platform, for developing in JavaScript for Slack. Bolt **significantly** reduces the learning curve for Slack development by abstracting away some of the more complicated language barriers involved. In this issue, you will be familiarizing yourself with Bolt.
 
 ## 📚 Reading Up
 
@@ -12,7 +12,11 @@ Before getting into Bolt, [read up on Slack](https://api.slack.com/start/overvie
 
 ## ✍️ Reflection
 
-After you are done with both articles, write down three things you found interesting and would like to learn more about. Afterwards, write down three more things that you found difficult to understand.
+After you are done with both articles, write down three things you found interesting and would like to learn more about in a file. Afterwards, write down three more things that you found difficult to understand.
+
+## Submission
+
+Your submission for this issue is the file(s) for your reflection!
 
 **After you have finished, make sure to commit any file changes you made. To do this, please create a `branch` off of the master called `week(x)` with x being the # of the week you are on. For that week you will need to create a PR for every Learning Lab step to review and make sure your work is correct. For example: After finishing step 1.2, make a new branch off of `week(x)` and call it `week(x)-1.2` (with 1.2 being the step you're on). Then create a `Pull Request` between `week(x)` and `week(x)-1.2`. After reviewing you're PR or having another user review it, merge you're work and continue.**
 
