--- a/Slack-Apps/homework/responses/1.4-basic-slack-app.md
+++ b/Slack-Apps/homework/responses/1.4-basic-slack-app.md
@@ -2,7 +2,7 @@
 
 #### Use what you learned and make your first Slack App.
 
- You will be building your first app, which is a bot that listens for and responds to specific text in chats. If you are having trouble, refer to [this article](https://slack.dev/bolt-js/tutorial/getting-started#:~:text=%20Getting%20started%20with%20Bolt%20for%20JavaScript%20,handled%2C%20it%E2%80%99s%20time%20to%20set%20up...%20More%20%E2%80%A9https://slack.dev/bolt-js/tutorial/getting-started) as an example of another simple app. Make sure that your app is set up (ie. ngrok is installed and running, )
+ You will be building your first app, which is a bot that listens for and responds to specific text in chats. If you are having trouble, refer to [this article](https://slack.dev/bolt-js/tutorial/getting-started#:~:text=%20Getting%20started%20with%20Bolt%20for%20JavaScript%20,handled%2C%20it%E2%80%99s%20time%20to%20set%20up...%20More%20%E2%80%A9https://slack.dev/bolt-js/tutorial/getting-started) as an example of another simple app. Refer to the previous sure that your app is set up (ie. ngrok is installed and running).
 
 ### Setting up environment variables
 
@@ -54,11 +54,13 @@ app.event('<your-event-here>', async ({ event, client }) => {
 });
 ```
 
+This code essentially specifies what your app should be looking for, and in the case that that event occurs, performs some sort of action.  In this case, we want to listen for someone joining a workspace. 
+
 Go to the [Slack Events API](https://api.slack.com/events) and find the event for when someone new joins a workspace. Replace the current event in the function call with the event name you found. **Hint:** this should be an event that you have subscribed to.
 
 ### Messaging in the channel
 
-Now it's time to create a new channel to remind new members to introduce themselves. To do this, [create a channel](https://slack.com/help/articles/201402297-Create-a-channel) in your workspace and open it up. In your browser URL, you can find the channel ID as the only code starting with a 'C'.
+Now it's time to create a new channel to remind new members to introduce themselves. To do this, [create a channel](https://slack.com/help/articles/201402297-Create-a-channel) in your workspace and open it up. In your browser URL, you can find the channel ID as the only code starting with a 'C'. Save the ID as a string constant in your code. 
 
 ![Finding a channel's id](./Gifs_Images/channel-id.png)
 
@@ -70,14 +72,18 @@ const result = await client.chat.postMessage({
     });
 ```
 
- The function will have JSON objects containing the information for the message. Look over [this documentation](https://api.slack.com/methods/chat.postMessage) on the Slack API to find which information you need to specify. Make sure to place the function within the try-catch statement to put it into effect.
+This code waits for a teammate to join before sending a message. The function will have JSON objects containing the information for the message. Look over [this documentation](https://api.slack.com/methods/chat.postMessage) on the Slack API to find which information you need to specify. Make sure to place the function within the try-catch statement to put it into effect.
 
 > **Note:** make sure to print the method to the console for testing purposes
 
-The output string should look something like "Welcome to the workspace, !" You can get the user id as a property of the event parameter. When finished, reinstall the app to your workspace. 
+The output string should look something like "Welcome to the workspace, !" You can get the user id as a property of the event parameter (refer to the end of [this tutorial](https://slack.dev/bolt-js/tutorial/getting-started#:~:text=%20Getting%20started%20with%20Bolt%20for%20JavaScript%20,handled%2C%20it%E2%80%99s%20time%20to%20set%20up...%20More%20%E2%80%A9http) for some clues). When finished, reinstall the app to your workspace. 
 
 If you have any or need some help, feel free to reach out to your TAs!
 
-**After you have finished, make sure to commit any file changes you made. To do this, please create a `branch` off of the master called `week(x)` with x being the # of the week you are on. For that week you will need to create a PR for every Learning Lab step to review and make sure your work is correct. For example: After finishing step 1.2, make a new branch off of `week(x)` and call it `week(x)-1.2` (with 1.2 being the step you're on). Then create a `Pull Request` between `week(x)` and `week(x)-1.2`. After reviewing you're PR or having another user review it, merge you're work and continue.**
+## Submission
+
+To move on to the following issue, commit your code! 
+
+**To do this, please create a `branch` off of the master called `week(x)` with x being the # of the week you are on. For that week you will need to create a PR for every Learning Lab step to review and make sure your work is correct. For example: After finishing step 1.2, make a new branch off of `week(x)` and call it `week(x)-1.2` (with 1.2 being the step you're on). Then create a `Pull Request` between `week(x)` and `week(x)-1.2`. After reviewing you're PR or having another user review it, merge you're work and continue.**
 
 **REMINDER: If you are part of the MENTORED group, after you complete all steps within a certain week and followed the instructions above, create a `Pull Request` with your work from `week(x)` to `master` and assign your mentor as a reviewer. If you are an open-source user, do the same but self-review your PR to continue to the next week.**
