updated week 1 slack apps

--- a/Slack-Apps/homework/responses/1.3-setup-app-and-learn-events.md
+++ b/Slack-Apps/homework/responses/1.3-setup-app-and-learn-events.md
@@ -69,7 +69,28 @@ The first thing you need to do is link your program to your app! The two pieces 
 
 ## Running the App
 
-Now you will need to 
+Now you will need to add some code to your app.js file to know when your app is running. Copy and paste the following code to app.js and then run `node app.js` to run it. There should be a line saying `⚡️ Bolt app is running`:
+
+```javascript
+////*********** section 1 *************
+const { App } = require('@slack/bolt');
+
+// Initializes your app with your bot token and signing secret
+const app = new App({
+  token: process.env.SLACK_BOT_TOKEN,
+  signingSecret: process.env.SLACK_SIGNING_SECRET
+});
+
+//*********** section 2 *************
+(async () => {
+  // Start your app
+  await app.start(process.env.PORT || 3000);
+
+  console.log('⚡️ Bolt app is running!');
+})();
+```
+
+This first section adds all of the dependencies for your slack app and makes a new app object. The second notifies you that the file is running.
 
 ## Connecting to the Slack App
 
@@ -117,7 +138,7 @@ After you have completed the project, try changing what the app listens for (ie 
 
 ## Submission
 
-To move onto the next issue, **commit your file** with your questions and create a pull request for that commit. Below are the full instructions:
+To move onto the next issue, **commit all of the files/folders dedicated to this app** as well as the **file for your questions** and create a pull request for that commit. Below are the full instructions:
 
 **After you have finished, make sure to commit any file changes you made. To do this, please create a `branch` off of the master called `week(x)` with x being the # of the week you are on. For that week you will need to create a PR for every Learning Lab step to review and make sure your work is correct. For example: After finishing step 1.2, make a new branch off of `week(x)` and call it `week(x)-1.2` (with 1.2 being the step you're on). Then create a `Pull Request` between `week(x)` and `week(x)-1.2`. After reviewing you're PR or having another user review it, merge you're work and continue.**
 
