--- a/Slack-Apps/homework/responses/1.4-basic-slack-app.md
+++ b/Slack-Apps/homework/responses/1.4-basic-slack-app.md
@@ -82,7 +82,7 @@ If you have any or need some help, feel free to reach out to your TAs!
 
 ## Submission
 
-To move on to the following issue, commit your code! 
+To move on to the following issue, commit the folder that stores app.js and all of the other files dedicated to your slack app. 
 
 **To do this, please create a `branch` off of the master called `week(x)` with x being the # of the week you are on. For that week you will need to create a PR for every Learning Lab step to review and make sure your work is correct. For example: After finishing step 1.2, make a new branch off of `week(x)` and call it `week(x)-1.2` (with 1.2 being the step you're on). Then create a `Pull Request` between `week(x)` and `week(x)-1.2`. After reviewing you're PR or having another user review it, merge you're work and continue.**
 
