--- a/Serverless-Functions/homework/responses/4.2-mvp.md
+++ b/Serverless-Functions/homework/responses/4.2-mvp.md
@@ -4,4 +4,8 @@ A [minimum viable product](https://en.wikipedia.org/wiki/Minimum_viable_product)
 
 Submit a working (loose definition) version of your MVP. Your project does not have to work smoothly or look presentable; it just needs to have a few main components (Azure Function included) that are interacting with each other.
 
+### Getting Started
+
+Starting and building a project from scratch can be daunting. Where do you even begin? Start by considering the project's bare bones. What does the program do at its core, without any aesthetic features or added functionality? In other words, what is the minimum viable product? Once you have that, break it down further. The key to building a project efficiently is to program one small part at a time and test each part as you go. For example, if your project has a webpage that takes user input, instead of creating all the components at once, make just a submit button and test it before moving on to the next component. Keep up the process of continuously creating and testing one piece at a time throughout the project. This will help save time on testing and debugging, as well as make the process less overwhelming. 
+
 **To move on, commit your MVP to this repo, and comment a brief summary of the problems you ran into while building it!**
